Fix icon distortion (duh)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,8 +119,8 @@ h6 { font-size: 1.1em; }
 }
 
 img.navicon {
-  height: 14px;
-  width: 14px;
+  max-height: 16px;
+  max-width: 16px;
 }
 
 .navbar {
